--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 		li {
 			font-size: 30px;
 		}
+
+		.red {
+			color: red;
+		}
+
+		.black {
+			color: black;
+		}
+
+		.grey {
+			color: grey;
+		}
 		
 	</style>
 </head>
