--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <html lang="en">
-<!-- feel free to revise this file -->
-
 <head>
 	<style>	
-		/*write your css rules here*/
-		
 		textarea {
-		  width:100%;
+		  width: 100%;
 		}
 
 		li {
@@ -24,57 +20,53 @@
 		.grey {
 			color: grey;
 		}
-		
 	</style>
 </head>
 
 <body>
-	<textarea id='text' rows="3" >Dinner, 1; Exercise, 2; Study, 3</textarea> 
+	<textarea id="text" rows="3">Dinner, 1; Exercise, 2; Study, 3</textarea> 
 	<br/>
-	<div class='divButton'>
-		<button id='btn_add'>Add</button>
-		<button id='btn_hide'>Toggle</button>
+	<div class="divButton">
+		<button id="btn_add">Add</button>
+		<button id="btn_hide">Toggle</button>
 	</div>
 
-	<ol id='order_list'>
-	</ol>	
+	<ol id="order_list"></ol>	
 </body>
 
-	<script>
-		const addBtn = document.getElementById("btn_add");
-		const toggleBtn = document.getElementById("btn_hide");
-		const textarea = document.getElementById("text");
-		const list = document.getElementById("order_list");
-	
-		addBtn.addEventListener("click", () => {
-			const input = textarea.value;
-			const items = input.split(";");
-	
-			items.forEach(item => {
-				if (item.trim() === "") return;
-	
-				const parts = item.split(",");
-				if (parts.length !== 2) return;
-	
-				const taskContent = parts[0].trim();
-				const category = parts[1].trim();
-	
-				const li = document.createElement("li");
-				li.textContent = taskContent;
-	
-				// assign color based on category
-				if (category === "1") li.className = "red";
-				else if (category === "2") li.className = "black";
-				else if (category === "3") li.className = "grey";
-	
-				list.appendChild(li);
-			});
-		});
-	
-		toggleBtn.addEventListener("click", () => {
-			list.style.display = list.style.display === "none" ? "block" : "none";
-		});
+<script>
+	const addBtn = document.getElementById("btn_add");
+	const toggleBtn = document.getElementById("btn_hide");
+	const textarea = document.getElementById("text");
+	const list = document.getElementById("order_list");
 
-	</script>
+	addBtn.addEventListener("click", () => {
+		const input = textarea.value;
+		const items = input.split(";");
+
+		items.forEach(item => {
+			if (item.trim() === "") return;
+
+			const parts = item.split(",");
+			if (parts.length !== 2) return;
+
+			const taskContent = parts[0].trim();
+			const category = parts[1].trim();
+
+			const li = document.createElement("li");
+			li.textContent = taskContent;
+
+			// assign color based on category
+			if (category === "1") li.className = "red";
+			else if (category === "2") li.className = "black";
+			else if (category === "3") li.className = "grey";
+
+			list.appendChild(li);
+		});
+	});
+
+	toggleBtn.addEventListener("click", () => {
+		list.style.display = list.style.display === "none" ? "block" : "none";
+	});
+</script>
 </html>
-
